	  testsuite/pdsh.test/Makefile.in :
	  Re-run bootstrap.

	* src/common/split.h, src/common/split.c : 
	  Add list_split_append() to append results of string split onto 
	  existing list.  Also, don't allocate new string in list_join().

	* src/pdsh/opt.c : Update callers of list_join().

	* src/common/split.c : list_split_append() returns list_join() if
	  list argument is NULL.
	  

2006-08-25  Mark Grondona <mgrondona@llnl.gov>

	* pdsh.spec : Remove erroneous "Requires: whatsup" from netgroup
	  and dshgroup. Remove Conflicts from machines. Build netgroup and
	  dshgroup by default since they have no build requirements.

2006-08-08  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/genders.c : Allow default user name to also be 
	  specified to pdsh_rcmd_type attr with "user@".

2006-08-02  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c (_signals_thread) : Add missing return from
	  signals thread.

2006-07-27  Mark Grondona <mgrondona@llnl.gov>

	* src/common/hostlist.c : Update to latest rev from LSD-Tools, which
	  fixes some bugs found by Coverity.

	* src/common/dsh.c, src/common/privsep.c : Add checks for return
	  codes from pthread_mutex_lock/unlock. (Coverity).

2006-07-26  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.h, src/pdsh/dsh.c : Allow ctrl-Z (SIGTSTP) issued
	  within 1s of ctrl-C to cancel pending threads (those threads which
	  have not yet begun issuing the remote command).

	* doc/pdsh.1.in, doc/pdcp.1.in : Update documentation.

	* : tag pdsh-2.11.

2006-07-18  Mark Grondona <mgrondona@llnl.gov>

	* scripts/dshbak : Add new -s option to sort output. Contributed by 
	  tdussa at users.sourceforge.net.

2006-07-06  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/opt.c : Fix bug where WCOLL hosts were unconditionally
	  added to list of targets. Prior behavior was to have -w override
	  WCOLL. [Reported by Fergal McCarthy].

2006-06-05  Jim Garlick <garlick@llnl.gov>

	* doc/pdsh.1.in : fix a few typos [Chris Pepper]
